--- a/index.html
+++ b/index.html
@@ -390,14 +390,17 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 <!-- Footer -->
 <footer id="footer" style="text-align: center; padding: 2em 0;">
 	<h2 style="margin-bottom: 1em;">Random PhotoBombs</h2>
-	<div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 1em;">
-		<div class="image"><img src="images/pic10.png" alt="Photo 1" /></div>
+	<div style="display: flex; flex-direction: column; align-items: center; gap: 1em;">
+		<div class="image"><img src="images/pic12.png" alt="Photo 1" /></div>
 		<div class="image"><img src="images/pic11.png" alt="Photo 2" /></div>
 		<div class="image"><img src="images/pic13.png" alt="Photo 3" /></div>
-		<div class="image"><img src="images/pic12.png" alt="Photo 4" /></div>
+		<div class="image"><img src="images/pic10.png" alt="Photo 4" /></div>
+		<div class="image"><img src="images/pic14.png" alt="Photo 5" /></div>
+
 		<li><a href="https://instagram.com/the1akhil" class="button">DEV</a></li>
 	</div>
 </footer>
+
 
 
 
